fixed blog titles on homepage spacing

--- a/_sass/theme/_main.scss
+++ b/_sass/theme/_main.scss
@@ -118,6 +118,8 @@ h2 {
   font-size: 1.6rem;
 }
 
+h4 { margin-top: 8px; }
+
 .component-heading {
   color: $gray;
   border-bottom: $lightgray dashed;
